--- a/views/base.pug
+++ b/views/base.pug
@@ -8,7 +8,7 @@ html
       link(rel='shortcut icon', type='img/png', href='img/favicon.png')
       link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Montserrat:400,700')
       title Natours | #{title}
-  body
+  body(data-alert=`${alert? alert : ''}`)
     // HEADER
     include _header    
     // CONTENT
